minor alignment fixes on mob view

--- a/component/contact/style.module.scss
+++ b/component/contact/style.module.scss
@@ -123,7 +123,7 @@
          flex-direction: column;
       }
    }
-   @media (max-width: 768px) {
+   @media (max-width: 600px) {
       .contactInfo {
          padding: 1rem;
          
